@@ -1,7 +1,7 @@
 #CFLAGS=-g -L.
 CFLAGS=-O2
 
-libkunet.so: drop.o logp.o logploss.o param.o softloss.o util.o xentloss.o
+libkunet.so: drop.o logp.o logploss.o param.o softloss.o util.o xentloss.o percloss.o
 	nvcc $(CFLAGS) --shared --compiler-options -fPIC $^ -lcublas -lcurand -o $@
 
 %.o: %.cu kunet.h
