@@ -209,6 +209,7 @@ end
 
 
 # Test each layer for: 1D-5D, gpu/cpu, float32/float64
-layers = (Bias, Conv, Drop, Logp, LogpLoss, Mmul, Pool, QuadLoss, Relu, Sigm, Soft, SoftLoss, Tanh, XentLoss)
+# layers = (Bias, Conv, Drop, Logp, LogpLoss, Mmul, PercLoss, Pool, QuadLoss, Relu, Sigm, Soft, SoftLoss, Tanh, XentLoss)
+layers=(PercLoss,)
 main(layers)
 
